--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.25.1",
     "serve-favicon": "~2.3.0",
+    "slug": "^0.9.1",
     "winston": "^2.3.0"
   }
 }
