--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "dependencies": {
     "body-parser": "~1.15.2",
+    "connect-ensure-login": "^0.1.1",
+    "connect-session-sequelize": "^4.1.0",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.1",
     "debug": "~2.2.0",
@@ -26,6 +28,8 @@
     "express-mysql-session": "^1.2.0",
     "helmet": "^3.1.0",
     "morgan": "~1.7.0",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
     "pg": "^6.1.5",
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.25.1",
