--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "ejs": "~2.5.2",
     "express": "~4.14.0",
     "express-mysql-session": "^1.2.0",
+    "express-validator": "^3.1.2",
     "helmet": "^3.1.0",
     "morgan": "~1.7.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "pg": "^6.1.5",
     "pg-hstore": "^2.3.2",
+    "result": "^2.0.9",
     "sequelize": "^3.25.1",
     "serve-favicon": "~2.3.0",
     "slug": "^0.9.1",
